--- a/dbank/src/dbank_frontend/src/index.scss
+++ b/dbank/src/dbank_frontend/src/index.scss
@@ -114,3 +114,14 @@ textarea[name="address"] {
   padding: 10px 2.7rem;
   font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
+.loading {
+  background-color: #211F2B;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
